--- a/app/config/common/parameters.yml
+++ b/app/config/common/parameters.yml
@@ -6,7 +6,7 @@ parameters:
     database_port:     null
     database_name:     brasst
     database_user:     root
-    database_password: null
+    database_password: root
     #Mailer
     mailer_transport: smtp
     mailer_host:      127.0.0.1
