--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
         "piwik/device-detector": "dev-master",
-        "fabpot/goutte": "~2.0"
+        "fabpot/goutte": "~2.0",
+        "doctrine/annotations": "^1.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
